--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,95 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-/*Generics*/
-.w-70 {
-  width: 70%;
-  margin:0 
+
+.nav-bar {
+    background-color: #add8e6;
+
 }
 
-.w-30 {
-  width: 30%;
-  margin: 0;
+.container {
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+    margin: 0 auto;
 }
 
-.nav-bar{
-  background-color:  #add8e6;
-  
-}
-.container{
-  display: flex;
-  justify-content:space-evenly;
-  width: 80%;
-  margin: 0 auto;
+.logo {
+    width: 20%;
+    border: 2px dashed black;
+    background-color: #d9a521;
+    text-align: center;
+    ;
+
 }
 
-.logo{
-  width: 20%;
-  border:2px dashed black;
-  background-color: #d9a521;
-  text-align:center
-  
-}
-.link{
-  width: 60%;
-  border:2px dashed black;
-  background-color: #d9a521;
-  text-align:center
+.link {
+    width: 60%;
+    border: 2px dashed black;
+    background-color: #d9a521;
+    text-align: center;
 }
 
-.login{
-    border:2px dashed black;
-  background-color: #d9a521;
-  width: 20%;
-  text-align:center
+.login {
+    border: 2px dashed black;
+    background-color: #d9a521;
+    width: 20%;
+    text-align: center;
 }
 
 /*BANNER*/
-.banner{
-  display:flex;
-  background-color:blue;
-  justify-content:center;
-  border-bottom: 5px solid  #add8e6;
-/*   padding: 30px; */
-}
-.pink-card,.blue-card{
-  border:2px dashed black;
-  background-color:pink;
-  width: 600px;
-  height:300px;
-  margin: 30px;
-}
-  .blue-card{
+.banner {
+    display: flex;
     background-color: blue;
-  }
-/*MAIN-CONTENT*/
-
-.main-content{
-  width: 80%;
-  margin: 0 auto;
+    justify-content: center;
+    border-bottom: 5px solid #add8e6;
+    /*   padding: 30px; */
 }
 
-/*WHITE CONTAINER*/ 
-.white-container,.grey-container{
-  display:flex; 
-  margin: 40px 
-  
+.pink-card,
+.blue-card {
+    border: 2px dashed black;
+    background-color: pink;
+    width: 600px;
+    height: 300px;
+    margin: 30px;
+    */
 }
-/*GREY CONTAINER*/
-.grey-container{
-    background-color: lightslategrey;
+
+.blue-card {
+    background-color: blue;
+}
+
+.white-content {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.white-container {
+    display: flex;
+    margin: 40px
+}
+
+.w-70 {
+    width: 70%;
+    margin: 0
+}
+
+.w-30 {
+    width: 30%;
+    margin: 0;
+}
+
+.grey-container {
+    display: flex;
+    margin: 40px;
+    background-color: grey;
     flex-direction: row-reverse;
+    padding: 50px 0
+}
+.grey-content{
+    width: 80%;
+    margin: 0 auto;
 }
